# apps/be/docs/swagger.yaml
@@ -165,6 +165,13 @@ definitions:
       tag:
         type: string
     type: object
+  dto.UpdateCategoryOrderRequestDTO:
+    properties:
+      id:
+        type: integer
+      order:
+        type: string
+    type: object
   dto.UpdateCategoryRequestDTO:
     properties:
       category:
@@ -199,6 +206,13 @@ definitions:
         items:
           $ref: '#/definitions/dto.TagDTO'
         type: array
+    type: object
+  dto.UpdateMenuOrderRequestDTO:
+    properties:
+      id:
+        type: integer
+      order:
+        type: string
     type: object
 host: Localhost:4000
 info:
@@ -408,6 +422,48 @@ paths:
       summary: 카테고리 수정
       tags:
       - category
+  /categories/order:
+    patch:
+      consumes:
+      - application/json
+      description: storeID와 menuID로 여러 메뉴 항목의 순서를 수정합니다.
+      parameters:
+      - description: 메뉴 ID
+        in: path
+        name: category
+        required: true
+        type: integer
+      - description: 수정할 메뉴 주문 정보 (JSON 형식)
+        in: body
+        name: request
+        required: true
+        schema:
+          items:
+            $ref: '#/definitions/dto.UpdateCategoryOrderRequestDTO'
+          type: array
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 수정 완료 메시지
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: 잘못된 요청 (invalid body)
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "401":
+          description: 인증 실패
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: 서버 에러
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: 카테고리 순서 수정
+      tags:
+      - category
   /menus:
     get:
       description: storeID에 해당하는 메뉴 목록을 조회합니다.
@@ -577,6 +633,48 @@ paths:
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
       summary: 메뉴판 조회
+      tags:
+      - menu
+  /menus/order:
+    patch:
+      consumes:
+      - application/json
+      description: storeID와 menuID로 여러 메뉴 항목의 순서를 수정합니다.
+      parameters:
+      - description: 메뉴 ID
+        in: path
+        name: menuID
+        required: true
+        type: integer
+      - description: 수정할 메뉴 주문 정보 (JSON 형식)
+        in: body
+        name: request
+        required: true
+        schema:
+          items:
+            $ref: '#/definitions/dto.UpdateMenuOrderRequestDTO'
+          type: array
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 수정 완료 메시지
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: 잘못된 요청 (invalid body)
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "401":
+          description: 인증 실패
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: 서버 에러
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: 메뉴 순서 수정
       tags:
       - menu
   /s3/{menuID}:
