# apps/be/internal/category/dto/update_category_order_request.dto.go
@@ -1,0 +1,6 @@
+package dto
+
+type UpdateCategoryOrderRequestDTO struct {
+	ID    uint   `json:"id"`
+	Order string `json:"order"`
+}
